# HairCutReminder

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  aibot_session.session  celery_worker.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: config.py  models.py  redis_client.py  tasks.py  utils.py
app/ai/: generator.py  openai_client.py
app/api/: endpoints.py
app/calendar_parser/: parser.py
app/news_parser/: telegram.py
app/telegram/: aibot_session.session  bot.py  publisher.py
