[project]
name = "jr-news-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrew",email = "kir.andrew@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "telethon (>=1.42.0,<2.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "celery (>=5.6.2,<6.0.0)",
    "redis (>=7.1.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
